--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "build/index.js",
   "repository": "https://github.com/Rainbow6-RUSSIA",
   "author": "BadCoder1337",
-  "license": "MIT",
+  "license": "GPL-3.0",
   "dependencies": {
     "lerna": "^3.16.4",
     "typescript": "^3.5.3"
