--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -9,6 +9,23 @@
     "access": "restricted"
   },
   "scripts": {
-    "test": "echo \"Error: run tests from root\" && exit 1"
+    "test": "echo \"Error: run tests from root\" && exit 1",
+    "start": "echo \"Start\"",
+    "postinstall": "sh ffmpeg-build.sh"
+  },
+  "dependencies": {
+    "ffmpeg": "^0.0.4",
+    "restify": "^8.4.0",
+    "restify-errors": "^8.0.1",
+    "socket.io": "^2.2.0",
+    "webrtc": "^1.14.1"
+  },
+  "devDependencies": {
+    "@types/ffmpeg": "^1.0.0",
+    "@types/node": "^12.7.2",
+    "@types/restify": "^8.4.0",
+    "@types/restify-errors": "^4.3.3",
+    "@types/socket.io": "^2.1.2",
+    "@types/webrtc": "^0.0.25"
   }
 }
